# evdev-midi

./: Cargo.toml  README.md
resources/mappings/: test.json  traktor_kontrol_x1.json
src/: main.rs
src/core/: conversion.rs  midi.rs  mod.rs
src/core/mapping/: mod.rs
src/input/: mod.rs
src/mapping/: midi.rs  mod.rs
