[package]
name = "evdev-midi"
version = "0.1.0"
authors = ["bitshift <bitshift@posteo.org>"]

[dependencies]
# evdev = "0.9.2"
evdev = { git = "https://github.com/bit-shift/evdev" }
midir = "0.2.0"
ioctl = "0.3.3"
bitflags = "*"
errno = "*"
libc = "*"
fixedbitset = "*"
num = "*"

[features]
unstable = []
